# puppeteer-screencast-to-video

./: .gitignore  Cargo.toml  package.json  test.js
node/: Cargo.toml
node/src/: lib.rs
x264/: Cargo.toml
x264-sys/: Cargo.toml  build.rs
x264-sys/src/: lib.rs
x264/examples/: fade.rs
x264/src/: colorspace.rs  data.rs  encoder.rs  image.rs  lib.rs  picture.rs
x264/src/setup/: mod.rs  preset.rs  tune.rs
