[package]
name = "node"
version = "0.1.0"
authors = ["LongYinan <lynweklm@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
base64 = "0.12"
jpeg-decoder = "0.1"
mp4 = "0.7"
napi = { version = "0.5" }
napi-derive = { version = "0.5" }
serde = "1"
serde_derive = "1"
serde_json = "1"
x264 = { path = "../x264" }

[target.'cfg(all(unix, not(target_env = "musl")))'.dependencies]
jemallocator = { version = "0.3", features = ["disable_initial_exec_tls"] }

[target.'cfg(windows)'.dependencies]
mimalloc = { version = "0.1" }

[build-dependencies]
napi-build = "0.2"
